Major refactor plus use better GDP data from IMF

--- a/WorldHappinessNotebook.Rmd
+++ b/WorldHappinessNotebook.Rmd
@@ -1,34 +1,52 @@
 ---
-title: "World Happiness Report Analysis"
+title: "Public Data: A Resource for Citizen Science"
 author: "Eric Lawton"
-date: "March 27, 2017"
+date: "`r Sys.Date()`"
 output:
   html_notebook: default
   'html_notebook: default': default
   pdf_document: default
 ---
+
 # About this notebook
-This notebook is my working document as I attempt to do a few inter-related things at once:  
-1. Investigate the possibility of understanding how to make the world a better place, first by understanding it and then by suggesting policy changes that are supported by evidence 
-2. Understand the quality of data in public data sets, mostly provided by governments and non-governmental organisations (NGOs)
-3. Learn R and several of its packages. You should be able to read this without knowing R or even looking at it, but if you are interested, you can see the code that generates the figures. 
-  + If you are not interested in the code, just select the option button "Code" at the top right of this page, and then "Hide all code". There are also individual "Code" buttons to hide or view individual chunks of code.
+
+Since I often complain about the fact that public policy is not driven by evidence, I am making an attempt to analyze public data from various sources to see what evidence is out there. What things are under the control of policy-making bodies and how those factors affect the things they should really try to change, especially the well-being of their constituents.
+
+This notebook is my working document as I attempt to do a few inter-related things at once:
+
+1. Investigate the use of public data sets as evidence to inform policy, driven by citizen social science
+  + Understand the quality of data in public data sets, mostly provided by governments and non-governmental organisations (NGOs)
+  + Identify gaps in the types of data available 
   
-I start with the [World Happiness Report (WHR)](http://worldhappiness.report/). This is because it seems to me that the usual economic indicators, like Gross Domestic Product (GDP), are not fit for purpose. GDP in particular is perverse. It measures economic activity, so things like environmental destruction appear as an economic gain, or if all the gains wealth and income go to a very few people, that is reported as a gain, and politicians are pleased to take credit for it, even if almost everyone else in the country loses.
-If "Happiness" seems a little flaky to you, think of it as the World Misery Report, as it is just the inverse, or many sites use more neutral terms like "Life satisfaction" or "Human Development Index".    
-The WHR site provides a complete downloadable report, with much analysis. That will not be repeated here. If you are interested in this topic, I recommend you read it as well. Here, I intend to look at additional aspects not covered and to look at how other public data can also shed light on the document.
-The first part of this page will be as readable as I can make it. Later parts will provide more detailed statistical analysis, which will "show my work" behind the first part.
+2. Learn more about R, a statistical programming language. However, you should be able to read this without knowing R or even looking at it. If you are not interested in the code, just select the option button "Code" at the top right of this page, and then "Hide all code". There are also individual "Code" buttons to hide or view individual chunks of code.   
+  + Investigate the possibility of citizen social scientists using these kinds of tools to educate themselves to better participate in public debate and decision-making, with your humble author as guinea pig. A step towards more Open Government.
+  + If you *R* interested, you can see it all on [GitHub](https://github.com/EricLawtonCA/WorldHappiness).  
+
+3. Make some code available to make the public data more useful by providing functions that make it more easily correlated, at least to R users. 
+  + I'm not sure yet if this will be worth making into a package. I'll have to see if the data is stable enough that a package would have a worthwhile lifetime.
+
+# World Happiness through R
+
+I have started with the [World Happiness Report (WHR)](http://worldhappiness.report/). This is because the usual economic indicators, like Gross Domestic Product (GDP), are not fit for purpose. GDP in particular is perverse. It measures economic activity, so things like environmental destruction appear as an economic gain. If there are gains in wealth and income for a very few extremely wealthy people while everyone else gains nothing, that is also reported as a gain. If we are going to govern ourselves well, we need measures of people's well-being to see the effect of our policies, not measures of how fast money is flowing, or how fast housing is becoming un-affordable.
+
+If "Happiness" seems a little flaky to you, think of it as the World Misery Report, as it is just the inverse of that. Other sites use more neutral terms like "Life satisfaction" or "Human Development Index", although the terms are not fully interchangeable because they use different measures. This is fine, because it is unrealistic to expect a single measure to be equally useful in all circumstances or for all people. I would also like to discover how closely these are correlated and whether one is a reasonable proxy for the others for a wide range of purposes.    
+
+The WHR site provides a complete downloadable report, with much analysis. I will not be repeat it here. If you are interested in this topic, I recommend you read it as well as this work. Here, I intend to look at additional aspects not covered and to look at how other public data can also shed light on the issue. I do not assume you have read the WHR.
+I will try to make the first few sections of this document readable by most people. Later parts will provide more detailed statistical analysis, which will "show my work" behind the first part.
+
 ## Status
-This is a working document. So far, very little has been done, the intent at this point was simply to establish the moving parts. The full project is kept [here, on GitHub](https://github.com/EricLawtonCA/WorldHappiness) 
+This is a working document. So far, I am just starting. The intent at this point was simply to establish the moving parts, by choosing some tools and tracking down some of the relevant data sets. There are "Notes on Tools" below on what those parts are.
+The full project is kept [on GitHub](https://github.com/EricLawtonCA/WorldHappiness). Free for all to use as they see fit. The more messy data wrangling code is in separate files, providing functions to return data frames in usable format for further analysis, so if you are really, really interested, you will need to look there.
 
 ## Summary of the data
-The happiness index itself is derived simply by asking people to rate their lives as if they were on a ladder of life, with rungs numbered 1 to 10, where “1” is the worst possible life and “10” the best. The public data provides the average (mean) for each country.
-There are many other variables provided in the data to measure such things as trust between people, feelings about level of corruption in the country and levels of economic equality. I will explore the relationship between these and then attempt other statistics from other public sources such as OECD statistics.
-Here is a look at the latest data, which compares the average person's position on the life ladder with the country's Gross Domestic Product (GDP). As you would expect, there is a rough match between GDP, which is itself a rough match to the country's wealth, and how good a life people think they are leading. However, it varies quite a lot. The blue line represents a kind of average - if a country is on the line, it is where you would expect to find it. If it is above, people are happier than in an average country with the same income; if it is below, people are less happy. As you can see, there are relatively poor countries where people are relatively happy, and there are some rich countries like the Nordic countries that are happier than you would expect them to be, while others at varying wealth levels are not so happy. Of course, this is an overly simplistic analysis, hence the rest of this document.
-**Note:** GDP is shown on a *log* scale. That just means that instead of each level of the scale being a fixed number of dollars (or pounds, or...), it represents multiplying the wealth by 4<span style="color:red"> (fix scale later so represents x2 or x10)</span>. This is because if you have only \$50 per month, adding another \$50 makes far more difference than adding \$50 when you have \$1000, so comparing the effect of doubling rather than adding a fixed amount makes more sense.
-```{r, echo=TRUE, message=FALSE, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+The happiness index itself is compiled simply by asking people to rate their lives as if they were on a ladder of life, with rungs numbered 1 to 10, where “1” is the worst possible life and “10” the best. The public data provides the average (mean) for each country.
+There are many other variables provided in the WHR data to measure such things as trust between people, feelings about level of corruption in the country and levels of economic equality. I will explore the relationship between these and then attempt other statistics from other public sources such as OECD statistics.
+
+### Set up the R environment
+This next little bit of code just loads all the R packages and auxiliary files. Not much to see.
+```{r}
 # library(knitr)
-# opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE)
+# opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE, message=FALSE)
 # Packages required - some not used in current version but I expect to use them soon.
 library(dplyr)      # For wrangling #OtherPeoplesData
 library(ggrepel)    # For putting labels on plots that "repel" each other so they are all visible and don't hide the points
@@ -45,28 +63,65 @@ library(mapdata)    # Contains the hi-resolution points that mark out the countr
 library(rgeos)
 library(maptools)  
 library(reshape2)  
-source("reformatters.r") # utilities for reading and reformatting public data
+source("data_loaders_and_cleaners.R") # utilities for reading and reformatting public data
 ```
 
+### Happiness and GDP
+Now I get to work.
+Here is a high-level look at the latest WHR data, which compares the average person's position on the life ladder with the country's Gross Domestic Product (GDP). As you would expect, there is a rough match between how good a life people think they are leading and GDP. However, it varies quite a lot. The blue line represents a kind of average - if a country is on the line, it is where you would expect to find it if GDP were an excellent predictor of well-being. If it is above, people are happier than in an average country with the same GDP; if it is below, people are less happy. 
 
-```{r}
-# Read the 2017 dataset, saved from Excel as .csv
-happiness.df <- read.csv("data/online+data+chapter+2+whr+2017.csv", stringsAsFactors=FALSE)
-GDP.df <- get_formatted_WB_GDP()
+**Technical note:** GDP is shown on a US\$ per-person *log* scale. That just means that instead of each step of the scale being a fixed number of dollars, it roughly shows the number of zeros in an amount. So, for example, South Sudan GDP per person is about \$300, Tanzania about \$1,000 and Luxembourg about \$100,000.   
+This is because if you have only \$300 per month, adding another \$300 makes far more difference than adding \$300 when you have \$10,000, so comparing the effect of multiplying rather than adding a fixed amount makes more sense.
+Happiness does roughly map to Gross Domestic Product, but fairly loosely. There are many outliers. Why  are people in the Kinshasa part of Congo much happier than those in other poor countries? Why are people in Botswana so unhappy in spite of being as wealthy as the people of Venezuela who themselves are below average for that amount of GDP? Why are people in the Nordic countries happier than others in even wealthier countries? Of course, this is an overly simplistic analysis, hence the rest of this document.
 
-# Too many countries to put all their names on the plot, so here is a subset whose names will be plotted
+```{r 2016summary, message=FALSE, warning=FALSE, results='hide'}
+# -------------------------------------
+# Load the main data sources
+# -------------------------------------
+
+# Names of countries and regions have very different names in different datasets.
+# Everyone loves standardisation, so they each create a new standard (standard joke :) 
+# Even the International Standards Organisation (ISO) has several, but I try to map everything to
+# their three-letter code as (so far) most data sets that actual use a code use that.
+country_ISO_codes_names <- get_ISO_Countries() # Standard and non-standard names, keyed by codes.
+
+# Primary Happiness data frame, loaded from WHR, augmented with standard country code
+happiness <- get_WHR_data() 
+
+# WHR data does have GDP data, but as "Log GDP per capita", so here is one source of raw data
+# World Economic Outlook is from International Monetary Fund, has lots of data
+WEO_stats <- read.csv("data/WEOOct2016all.csv", stringsAsFactors=FALSE)
+# Extract the per capita GDP
+per_capita_GDP <- get_IMF_GDP_estimates()
+# and merge it with the WHR data
+happiness <- merge(happiness,per_capita_GDP,by.x = c("country_code_3ltr","year"), by.y = c("country_code","year"))
+
+# Too many countries to put all their names on the plot, so read the names of some that we want to
+# pay more attention to.
 # For now, this is just an arbitrary list with countries I know personally and outliers on the graph
-# Will pick some other countries out later for specific purposes
-named_countries <- c("Afghanistan","Congo","Sudan","Myanmar","Iraq","Venezuela","Denmark",
-                     "India","Russia","Argentina","Greece","Brazil","China","Italy", "Congo (Kinshasa)", "Tanzania",
-                     "South Africa","Rwanda", "Bhutan","Botswana","Netherlands","Syria","Central African Republic","South Sudan",
-                     "Spain","France", "Barbados","Japan","Germany","Qatar","Luxembourg",
-                     "Norway","Singapore","New Zealand","United States", "United Kingdom","Canada")
-named_country.df <- subset(happiness.df,country %in% named_countries)
-happiness.df <- transform(happiness.df, PrintCountry = ifelse(country %in% named_countries, country, "")) # separate column for named countries only
-ggplot(filter(happiness.df,year == 2016 & !is.na(Log.GDP.per.capita)),aes(y=Life.Ladder,x=Log.GDP.per.capita)) +
-  labs(title="Money partly buys happiness") +
-  scale_x_continuous(name="GDP per person (log scale)",breaks=seq(0,12,1)) + # various labels
+# The names are in an external file to make it easier to pick other countries out later for specific 
+# purposes, such as EU members, OECD members,...
+named_countries <- scan(file = "data/printNamesCountries.dat",sep = "\n", what = character())
+
+# Add a column for just the countries whose names are to be plotted so plot not too messy
+# All countries will be plotted, just not all names
+happiness <- transform(happiness, PrintCountry = ifelse(country %in% named_countries, country, "")) 
+
+# For now, just plot a single year. 2016 is the most recent with all happiness data, 
+# and just a few gaps in GDP !! TODO - replace WHR version with complete World Bank data
+happiness_in_2016 <- filter(happiness, year == 2016 & !is.na("per_person_GDP"))
+
+# -------------------------------------
+# Create a scatter plot with a linear regression line
+# -------------------------------------
+
+# We're going to plot a linear regression line, how well does it fit?
+dr2 <- summary(lm(Log.GDP.per.capita ~ Life.Ladder, data = happiness_in_2016))$r.squared 
+
+# Scatter plot and linear regression of GDP as predictor for happiness
+ggplot(happiness_in_2016, aes(y=Life.Ladder, x=log10(per_person_GDP))) +
+  labs(title=paste0("Money helps with happiness", " R² = ", as.integer(dr2*100), "%")) +
+  scale_x_continuous(name="GDP per person (log 10 scale)",breaks=seq(0,12,1)) + # various labels
   scale_y_continuous(name="'Best to worst possible life' 1-10",breaks=seq(2,10,1), limits=c(2, 10)) +
   geom_point() +
   geom_smooth(method=lm, se=FALSE) + # Add linear regression line
@@ -75,66 +130,56 @@ ggplot(filter(happiness.df,year == 2016 & !is.na(Log.GDP.per.capita)),aes(y=Life
                   point.padding = unit(1,"lines"))
 ```
 ## On a map
+The following graphic shows the happiness on a world map. The paler the colour, the happier the people.
 ```{r}
 world_map <- map_data("world") # which map to use, from ggplot's collection
-# Since the world map uses different country names, add a column and change some
-happiness.df$map.region <- happiness.df$country
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "United States", "USA", map.region))
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "United Kingdom", "UK", map.region))
-# Hong Kong is a sub-region of China, so for now, ignore sub and put in China
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Hong Kong", "China", map.region))
-# Trinidad and Tobago mapped as two separate regions. Stick both in Trini for now, will need to go with sub-regions later
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Trinidad and Tobago", "Trinidad", map.region))
-# Same issue with North Cyprus
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "North Cyprus", "Cyprus", map.region))
-# Same issue with Somaliland Region
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Somaliland region", "Somalia", map.region))
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Palestinian Territories", "Palestine", map.region))
-# Same issue with North Cyprus
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Congo (Brazzaville)", "Democratic Republic of the Congo", map.region))
-happiness.df <- transform(happiness.df, map.region = ifelse(map.region == "Congo (Kinshasa)", "Democratic Republic of the Congo", map.region))
-ggplot(happiness.df) + 
+# Since the ggplot world map uses different country names, add a column with those names
+# based on matching WHI names.
+happiness <- merge(happiness, country_ISO_codes_names[c("ggplot_region_name","Alpha.3.code")], 
+                   by.x = "country_code_3ltr", by.y = "Alpha.3.code")
+ggplot(happiness) + 
   # Plot empty map because some regions have no happiness data, especially those that are 
   # territories of other countries.
   geom_map(data=world_map, map = world_map, 
                            aes(map_id=region), fill="white", color="black") +
   #plot the actual life ladder
-  geom_map(map = world_map, aes(map_id = map.region, fill = Life.Ladder), colour = "black") +
+  geom_map( data=happiness, map = world_map, aes(map_id = ggplot_region_name, fill = Life.Ladder), colour = "black") +
   labs(x="", y="", title="Life Ladder position by country") +
   theme(axis.ticks=element_blank(), axis.text=element_blank()) +
   expand_limits(x = world_map$long, y = world_map$lat) # no plot appears without this
 ```
 
 # Variation by year
-People's happiness will change over time. This graphic shows that even on a country level, it changes quite significantly over a period of five years. I'm hoping that exploring how other factors also vary will shed more light on the possible causes. This seems more likely than comparisons between countries except where they are similar.
-It seems particularly odd that a country with "And the pursuit of happiness" in its consitution does not actually track happiness data as such, but I suppose it's only the pursuit that it cares about.
+People's happiness will change over time. The following graphic shows that even on a country level, it changes quite significantly over a period of five years. I'm hoping that exploring how other factors also vary will shed more light on the possible causes. This seems more likely than comparisons between countries except where they are similar.
+It seems particularly odd that a country with "And the pursuit of happiness" in its consitution does not actually track happiness data as such, but I suppose it's only the pursuit that it officially cares about, not the achievement.
 
 ```{r}
-named_country_2016.df <- filter(happiness.df,PrintCountry != "" & year == 2016)
-named_country_2011.df <- filter(happiness.df,PrintCountry != "" & year == 2011)
-named_country_2016.df$laddergain <- 
-  named_country_2016.df$Life.Ladder - named_country_2011.df$Life.Ladder
-ggplot(named_country_2016.df, aes(x = reorder(country, laddergain), y = laddergain)) +
+named_country_2016 <- filter(happiness,PrintCountry != "" & year == 2016)
+named_country_2011 <- filter(happiness,PrintCountry != "" & year == 2011)
+named_country_2016$laddergain <- 
+  named_country_2016$Life.Ladder - named_country_2011$Life.Ladder
+ggplot(named_country_2016, aes(x = reorder(country, laddergain), y = laddergain)) +
   theme(axis.title.y=element_blank()) +
   ylab("Gain (loss) in Happiness from 2011 to 2015") +
   geom_bar(stat = "identity") + coord_flip()
 ```
-If we look at how changes in happiness correlate with GDP, we see
+If we look at how changes in happiness correlate with changes in GDP, we see that there is not a high correlation between them. Notice the "R^2^=0%" in the title of the graphic. That suggests that changes in GDP are not much related to changes in happiness.  So that suggests something else caused those changes in happiness. Venezuala is an exception, where the economy collapsed. It is understandable that either a total collapse of the economy could produce misery, but it is also plausible that other factors caused both.
 ```{r}
 # Filter out the 2016 rows into one data frame, the 2011 into another and then merge so we can compare the two years
-data_2016.df <- filter(happiness.df, year == 2016)
-data_2011.df <- filter(happiness.df, year == 2011)
-compare_2016_2011.df <- merge(data_2016.df, data_2011.df, by = "country")
-compare_2016_2011.df$GDPgain <- 
-  compare_2016_2011.df$Log.GDP.per.capita.x - compare_2016_2011.df$Log.GDP.per.capita.y
-compare_2016_2011.df$laddergain <- 
-  compare_2016_2011.df$Life.Ladder.x - compare_2016_2011.df$Life.Ladder.y
+data_2016 <- filter(happiness, year == 2016)
+data_2011 <- filter(happiness, year == 2011)
+compare_2016_2011 <- merge(data_2016, data_2011, by = "country")
+# percentage change makes most sense to measure gain (loss) in GDP
+compare_2016_2011$GDPgain <- 
+  ((compare_2016_2011$per_person_GDP.x - compare_2016_2011$per_person_GDP.y)*100)/compare_2016_2011$per_person_GDP.y
+compare_2016_2011$laddergain <- 
+  compare_2016_2011$Life.Ladder.x - compare_2016_2011$Life.Ladder.y
 # discard the rows where we can't compare GDP, happiness gains. 
-compare_2016_2011.df <- filter(compare_2016_2011.df, !is.na(GDPgain) & !is.na(laddergain))
-dR2 <- summary(lm(GDPgain ~ laddergain, data = compare_2016_2011.df))$r.squared #get the actual r2 deviation
-ggplot(compare_2016_2011.df,aes(x=laddergain,y=GDPgain)) +
+compare_2016_2011 <- filter(compare_2016_2011, !is.na(GDPgain) & !is.na(laddergain))
+dR2 <- summary(lm(GDPgain ~ laddergain, data = compare_2016_2011))$r.squared #get the actual r2 deviation
+ggplot(compare_2016_2011,aes(y=laddergain,x=GDPgain)) +
   labs(title=paste0("More money doesn't buy much more happiness", " R² = ", as.integer(dR2*100), "%")) +
-  scale_x_continuous(name="Log GDP change" ) + #,breaks=seq(0,12,1)) + # various labels
+  scale_x_continuous(name="% GDP change" ) + #,breaks=seq(0,12,1)) + # various labels
   scale_y_continuous(name="Change in 'Best to worst possible life' 1-10") +
   geom_point() +
   geom_smooth(method=lm, se=FALSE) + # Add linear regression line
@@ -144,15 +189,25 @@ ggplot(compare_2016_2011.df,aes(x=laddergain,y=GDPgain)) +
 ```
 
 # Variation within countries
-Since happiness of residents should be much more important to governments than total money flows, you would think that they would track how track it by sub-populations, especially for Indigenous people and other minorities.
-**To do** see what proxies I can find. A quick web search shows several NGOs with some data in this area.
+Since happiness of residents should be much more important to governments than total money flows, you would think that they would track how track it by sub-populations, especially to see how their policies are related to the well-being of Indigenous people, people in disadvantaged regions or disadvantaged other minorities. 
+
+# Data quality
+
+Names of regions are not consistent between data sources, with many countries having various official and informal names. The official ones are often long and descriptive (For example, "Peoples Republic of..." which are hard to fit on graphics. I will use 
+Even the ISO standard codes for country names have 3 sub-standards.
+The most widely used is the 2-character code, also used for country Internet domain names. This study will use that as the primary key.
+The data is mostly provided by the sources in comma-separated-values (csv) format, or Microsoft XLS, sometimes within zip files.
+I decided to save it all locally as .csv, if only to avoid frequent downloads of a lot of data. No further manipulation is done on the source data.
 
 # Data sources
 
-Link to source | Description
----------------|-------------
+Link to source                                  | Description
+------------------------------------------------|---------------------------------------------------
 [World Bank](http://datacatalog.worldbank.org/) | GDP by country by year, US$, csv data 
 [World Happiness Report (WHR)](http://worldhappiness.report/) | Detailed report and data in XLSX format
+[ISO Standard Country Codes](https://www.iso.org/obp/ui/#search/code/) | I screen-scraped this list as they wanted $300 for their full list, which contains internal regions codes (e.g. States, Provinces)
+
+The ISO idea of "Country short names" includes "The United Kingdom of Great Britain and Northern Ireland" which is not exactly short and doesn't fit well on graphics. The *Happiness Report* names made me happier, so I used those. As that required some "by hand" fixing of those that didn't exactly match, I used R <span style="font-family: monospace">merge</span>, saved the results as ISO_countries_plus.csv and fixed the few that needed a human eye. 
 
 # Notes on tools
 **Warning: Nerdish**
@@ -163,10 +218,16 @@ I’m using R because it is an excellent Open Source tool, with many useful pack
 2. several packages failed to load, wanted recompiling and other nuisances. I wanted to do work with them, not spend time making them work. R has so far been super-friendly, nothing has failed, or at least not so much that doing a re-install of R hasn't fixed it, and that only once.  
 
 ## Why R Notebooks?
-This new feature lets me produce this document right in RStudio, with the code embedded right in the document. The formatting is done with R Markdown
+This new feature lets me produce this document right in RStudio, with the code embedded right in the document. The formatting is done with R Markdown.  
 I had previously been using LyX, an easy-to-use editor for LaTeX. This is good too, it also lets me embed R code right in the document, powered by the same <span style="font-family: monospace">knitr</span> facility that lets me embed the R in this document.  
-On the R NOtebook side, no more writing code in RStudio, then pasting into LyX, then compiling. Also, there is a really handy "publish" site, which is probably where you're reading this. One click and it's published
-On the downside, I don't much like markdown languages, they're not flexible enough. Even writing this <span style="font-family: monospace">fixed-space font example</span> requires dropping into HTML. And as far as I can tell, with this first release, R Notebooks only format to HTML, even though the underlying markdown will also generate LaTeX or PDF. 
+On the R Notebook side, no more writing code in RStudio, then pasting into LyX, then compiling. Also, there is a really handy "publish" site, which is probably where you're reading this. One click and it's published
+On the downside, I don't much like markdown languages, they're not flexible enough. Even writing this <span style="font-family: monospace">fixed-space font example</span> requires dropping into HTML, and then it doesn't do anything when generating PDF via LaTeX.
 
-**Conclusion:** I think I'll stick to R Notebooks while I'm mostly coding, then switch to LyX to get better formatting documents.
-XX
+**Conclusion:** I think I'll stick to R Notebooks until almost done, then switch to LyX to get better document formatting.
+
+# To do list
+* Create a graphical data model with a representation and description for the various sources and keys to make correlation easier. For example, there are too many variations in country names, formal and informal, so I need to pick a standard key and map them all to that. There are already "standard" keys including a two- and a three-letter code. Provisionally, the 2-letter code used by Wikipedia seems to be the best bet
+* See what proxies I can find for happiness measures for populations within countries, such as Indigenous populations. A quick web search shows several NGOs with some data in this area.  
+* Look at correlations between happiness and inequality indices, such as the GINI index,
+* Use Bayesian Network-based machine learning to see if I can discover additional correlations
+* Use STAN to build some generalised linear models
